@@ -6,14 +6,28 @@
  * User Manual available at https://docs.gradle.org/7.3/userguide/building_java_projects.html
  */
 
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath "gradle.plugin.com.github.johnrengelman:shadow:7.1.2"
+    }
+}
+
 plugins {
     // Apply the application plugin to add support for building a CLI application in Java.
     id 'application'
-    id 'com.gradle.plugin-publish' version "1.1.0"
+    id 'com.gradle.plugin-publish' version '1.1.0'
+    id 'com.github.johnrengelman.shadow' version '7.1.2'
+    id 'java-gradle-plugin'
 }
 
-<<<<<<< HEAD
-=======
+
+
+apply plugin: 'com.github.johnrengelman.shadow'
+
+
 sourceCompatibility = 11
 targetCompatibility = 11
 
@@ -29,14 +43,13 @@ compileJava {
 gradlePlugin {
     plugins {
         simplePlugin {
-            id = 'org.mainmethod0126.simple-semantic-version'
+            id = 'kr.co.softcamp.simple-semantic-version'
             implementationClass = 'gradle.simple.versioning.SemanticVersionManager'
         }
     }
 }
 
 
->>>>>>> 9336fe4 (0.1.0 배포를 위한 커밋 정리)
 // Configure the plugin portal URL
 // gradlePluginPortal {
 //     credentials {
@@ -52,6 +65,16 @@ repositories {
     google()
 }
 
+
+shadowJar {
+    baseName = "gradle-semantic-versioning-manager-plugin"
+    version = "0.1.0"
+    classifier = null
+}
+
+tasks.withType(Test).configureEach {
+    it.jvmArgs = ["--add-opens=java.base/java.lang=ALL-UNNAMED"]
+}
 
 dependencies {
 
